[BUGFIX] Remove horizontal scroll on landing page (smaller screens)

--- a/public/app/themes/default/theme.less
+++ b/public/app/themes/default/theme.less
@@ -52,7 +52,6 @@ section {
 
   &.sp__landing {
     font-weight: 300;
-    overflow: auto;
   	padding: 2rem;
   }
 
